--- a/portfolio-website/src/components/About/About.css
+++ b/portfolio-website/src/components/About/About.css
@@ -76,6 +76,7 @@
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -92,6 +93,10 @@
 
   .about-content {
     min-width: 100%;
+  }
+
+  .about-content p {
+    text-align: justify;
   }
 
   .about-image {
